<resources>
    <string name="opac_usernr">Ausweisnummer</string>
    <string name="opac_usernr_desc">Gib eine Ausweisnummer an, um auf dein Konto zugreifen zu können</string>
    <string name="opac_password">Passwort</string>
    <string name="search">Katalogsuche</string>
    <string name="titel">Titel</string>
    <string name="titel_hint">Stichwort</string>
    <string name="verfasser">Verfasser</string>
    <string name="verfasser_hint">Nachname, Vorname</string>
    <string name="verlag">Verlag</string>
    <string name="zweigstelle">Zweigstelle</string>
    <string name="zweigstelleSearch">Medien in Zweigstelle</string>
    <string name="interessenkreis">Interessenkreis</string>
    <string name="ISBN">ISBN</string>
    <string name="barcodes">Strichcodes</string>
    <string name="barcode_internal">Buchungsnr.</string>
    <string name="barcode_internal_not_supported">Suche nach Buchungsnr. in dieser Bibliothek nicht unterstützt. Scanne bitte eine ISBN.</string>
    <string name="jahr">Jahr</string>
    <string name="mediengruppe">Mediengruppe</string>
    <string name="schlag">Schlagwörter</string>
    <string name="systematik">Systematik</string>
    <string name="go_search">Suche starten</string>
    <string name="jahr_von">von</string>
    <string name="jahr_bis">bis</string>
    <string name="search_results">Suchergebnisse</string>
    <string name="prefs">Einstellungen</string>
    <string name="account">Konto</string>
    <string name="about">Über</string>
    <string name="about_summary">Über diese App</string>
    <string name="information">Informationen</string>
    <string name="changelog">Änderungsverlauf</string>
    <string name="close">Schließen</string>
    <string name="osl">Lizenzhinweise</string>
    <string name="thanks">Mitautoren und Danksagungen</string>
    <string name="developer_settings">Entwickler-Einstellungen</string>
    <string name="details">Details</string>
    <string name="copies">Exemplare</string>
    <string name="details_head">DETAILS</string>
    <string name="copies_head">EXEMPLARE</string>
    <string name="order">Sortierung</string>
    <string name="ret">Rückgabe</string>
    <string name="res">Vorbestellt</string>
    <string name="export">Details exportieren</string>
    <string name="reserve">Vorbestellen</string>
    <string name="res_zst">Zweigstelle auswählen</string>
    <string name="doing_res">Führe Vorbestellung durch…</string>
    <string name="status_nouser">In den Einstellungen sind zu diesem Konto keine Ausweisdaten hinterlegt.</string>
    <string name="dismiss">Schließen</string>
    <string name="loading_account">Lade Konto…</string>
    <string name="entl">Entliehen</string>
    <string name="reservations">Vorbestellungen</string>
    <string name="entl_head">ENTLIEHEN</string>
    <string name="reservations_head">VORBESTELLUNGEN</string>
    <string name="entl_none">Keine Medien entliehen</string>
    <string name="reservations_none">Keine Medien vorbestellt</string>
    <string name="extendall">Alle verlängern</string>
    <string name="cancel_confirm">Vorbestellung wirklich entfernen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="cancel">Abbrechen</string>
    <string name="cont">Weiter</string>
    <string name="delete">Löschen</string>
    <string name="accept">OK</string>
    <string name="doing_cancel">Vorbestellung wird gelöscht…</string>
    <string name="doing_prolong">Verlängerung wird durchgeführt…</string>
    <string name="doing_prolong_all">Medien, die verlängert werden können, werden verlängert…</string>
    <string name="opac_error">Meldung vom Web-Opac:</string>
    <string name="welcome">Herzlich Willkommen</string>
    <string name="welcome_select">Zuerst muss ein Bibliothekskonto eingerichtet werden.</string>
    <string name="welcome_account">Dieses Konto kann anonym sein (nur Suche), oder Ausweisnummer und Passwort enthalten (auch Kontofunktionen). Es können später in den Einstellungen weitere Konten angelegt werden.</string>
    <string name="select_library">Bibliothek auswählen</string>
    <string-array name="orders">
        <item>Standard</item>
        <item>Erscheinungsjahr</item>
        <item>Mediengruppe</item>
    </string-array>
    <string name="restart">Anwendung neustarten</string>
    <string name="report">Bericht senden</string>
    <string name="report_sending">Sende Bericht…</string>
    <string name="report_sent">Bericht gesendet. Vielen Dank!</string>
    <string name="report_error">Bericht konnte nicht gesendet werden.</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="notification_service">Ablaufende Medien</string>
    <string name="notification_service_desc">Benachrichtigung, wenn ein Medium abgegeben werden muss (keine Garantie)</string>
    <string-array name="warning">
        <item>Am selben Tag</item>
        <item>3 Tage vorher</item>
        <item>1 Woche vorher</item>
    </string-array>
    <string-array name="warning_n">
        <item>86400000</item>
        <item>259200000</item>
        <item>604800000</item>
    </string-array>
    <string name="notification_warning">Warnzeitraum</string>
    <string name="notification_warning_desc">Wie lange vorher soll benachrichtigt werden?</string>
    <string name="notif_ticker">%s Bücher müssen abgegeben oder verlängert werden!</string>
    <string name="notif_title">Bücher laufen ab</string>
    <string name="welcome_assistant">Bibliotheks-Auswahl</string>
    <string name="headline">Web Opac</string>
    <string name="baende">BÄNDE</string>
    <string name="baende_volumesearch">Einzelbände zeigen</string>
    <string name="star">Merken</string>
    <string name="starred">Das Medium ist jetzt auf deiner Merkliste</string>
    <string name="star_noid">Funktion leider in dieser Bibliothek nicht verfügbar</string>
    <string name="star_wait">Bitte warten, bis die Details geladen wurden!</string>
    <string name="starred_list">Merkliste</string>
    <string name="starred_welcome">Dies ist deine Merkliste. Du kannst in der Detailansicht von jedem Medium den Stern für „Merken“ auswählen, dann erscheint das Medium hier auf der Liste. Die Liste wird für jede Bibliothek, die du benutzt, seperat geführt.</string>
    <string name="share">Teilen</string>
    <string name="share_wait">Bitte warten, bis die Details geladen wurden</string>
    <string name="share_notsupported">In dieser Bibliothek nicht unterstützt</string>
    <string name="unsupported">Funktion nicht unterstützt</string>
    <string name="account_unsupported_api">Diese Funktion wird in deiner Bibliothek noch nicht unterstützt. Um das zu ändern brauchen wir Hilfe von Lesern dieser Bibliothek. Wenn du helfen möchtest, melde dich unter raphael@geeksfactory.de</string>
    <string name="account_unsupported">Diese Funktion wird in deiner Bibliothek noch nicht unterstützt. Um das zu ändern brauchen wir Hilfe von Lesern dieser Bibliothek: Wenn du auf „Bericht senden“ klickst, können wir versuchen, das im nächsten Update zu ändern. Wir kennen dann eventuell deine Ausweisnummer und was du für Bücher ausgeliehen hast (nicht dein Passwort, nicht deinen Namen und auch sonst nichts zu deiner Person!) aber wir gehen mit den Daten verantwortungsbewusst um und löschen sie, sobald wir sie ausgewertet haben.</string>
    <string name="info">Infos</string>
    <string name="write_mail">E-Mail schreiben</string>
    <string name="info_error">Die zusätzlichen Informationen der Bibliothek konnten nicht abgerufen werden.</string>
    <string name="info_unsupported">Deine Bücherei stellt keine zusätzlichen Informationen bereit, die wir dir anzeigen könnten.</string>
    <string name="connection_error">Fehler</string>
    <string name="connection_error_detail">Der Aufbau einer Verbindung zum Bibliotheksserver ist fehlgeschlagen. Prüfe, ob eine Verbindung zum Internet verfügbar ist. Möglicherweise hat auch der Bibliotheksserver ein Problem oder die App konnte seine Antwort nicht auswerten.</string>
    <string name="connection_error_detail_nre">Der Aufbau einer Verbindung zum Bibliotheksserver ist fehlgeschlagen. Prüfe, ob eine Verbindung zum Internet verfügbar ist. Wenn ja, hat wahrscheinlich der Bibliotheksserver ein Problem.</string>
    <string name="retry">Erneut versuchen</string>
    <string name="default_account_name">Unbenanntes Konto</string>
    <string name="connecting_initially">Baue erstmalige Verbindung mit Bibliotheksserver auf…</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_account_list">Konten</string>
    <string name="account_add">Konto hinzufügen</string>
    <string name="accounts">Konten</string>
    <string name="account_header">KONTO: %s</string>
    <string name="accounts_edit">Konto bearbeiten</string>
    <string name="accounts_desc">Genutzte Bibliotheken und Mitgliedsnummern verwalten</string>
    <string name="account_label">Bezeichnung</string>
    <string name="account_nr">Ausweisnummer/-name (optional)</string>
    <string name="account_password">Passwort (optional)</string>
    <string name="account_city">Bibliothek</string>
    <string name="account_delete_confirm">Konto wirklich löschen?</string>
    <string name="title_activity_account_edit">Konto bearbeiten</string>
    <string name="account_select">Konto auswählen</string>
    <string name="all">Alle</string>
    <string name="privacy">Datenschutzbestimmungen</string>
    <string name="nav_hl_library">Bibliothek</string>
    <string name="nav_search">Katalogsuche</string>
    <string name="nav_account">Konto</string>
    <string name="nav_starred">Merkliste</string>
    <string name="nav_info">Informationen</string>
    <string name="nav_hl_other">Sonstiges</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_about">Über die App</string>
    <string name="nav_hl_ccountlist">Kontoauswahl</string>
    <string name="pagination_next">Nächste Seite</string>
    <string name="pagination_prev">Vorige Seite</string>
    <string name="crash_toast_text">Ein Fehler ist aufgetreten. Bitte warten Sie einen Augenblick.</string>
    <string name="crash_dialog_text">In der Opac App ist ein Fehler aufgetreten! Bitte schicken Sie uns den Fehlerbericht per E-Mail ein, dann können wir ihn beheben.</string>
    <string name="refresh">Aktualisieren</string>
    <string name="prolong_all">Alle verlängern</string>
    <string name="account_no_concurrent">Bitte warten, bis die Ansicht aktualisiert wurde.</string>
    <string name="error_connection">Verbindungsfehler</string>
    <string name="confirm_title">Bestätigen</string>
    <string name="confirm">Bestätigen</string>
    <plurals name="account_age_minutes">
        <item quantity="zero">Die angezeigten Daten sind aktuell.</item>
        <item quantity="one">Die angezeigten Daten sind eine Minute alt.</item>
        <item quantity="other">Die angezeigten Daten sind %d Minuten alt.</item>
    </plurals>
    <plurals name="account_age_hours">
        <item quantity="one">Die angezeigten Daten sind eine Stunde alt.</item>
        <item quantity="other">Die angezeigten Daten sind %d Stunden alt.</item>
    </plurals>
    <plurals name="account_age_days">
        <item quantity="one">Die angezeigten Daten sind einen Tag alt.</item>
        <item quantity="other">Die angezeigten Daten sind %d Tage alt.</item>
    </plurals>
    <string name="search_advanced">Erweiterte Suche</string>
    <string name="search_free">Freie Suche</string>
    <string name="advanced">Erweiterter Modus</string>
    <string name="advanced_desc">Zeigt weitere, selten benutzte Suchfelder.</string>
    <string name="homebranch">Aktuelle Zweigstelle („eigene Zweigstelle“)</string>
    <string name="barcode_title">Barcode Scanner installieren?</string>
</resources>