<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svNav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvLibrary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/nav_head_bg"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:textColor="@color/nav_head_fg" />

        <org.holoeverywhere.widget.TextView
            android:id="@+id/tvHlLibrary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLibrary"
            android:layout_marginTop="8dp"
            android:drawableBottom="@drawable/navigation_header"
            android:drawablePadding="4dp"
            android:paddingLeft="16dp"
            android:text="@string/nav_hl_library"
            android:textAllCaps="true"
            android:textColor="@color/nav_headline"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/llNavSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/tvHlLibrary"
            android:background="@drawable/nav_item"
            android:clickable="true"
            android:gravity="center|left" >

            <View
                android:id="@+id/viewRedbarNavSearch"
                android:layout_width="8dp"
                android:layout_height="fill_parent" >
            </View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:padding="4dp" >

                <ImageView
                    android:id="@+id/ivNavSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_search" />

                <TextView
                    android:id="@+id/tvNavSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/ivNavSearch"
                    android:text="@string/nav_search"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/nav_fg" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNavAccount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/llNavSearch"
            android:background="@drawable/nav_item"
            android:clickable="true"
            android:gravity="center|left" >

            <View
                android:id="@+id/viewRedbarNavAccount"
                android:layout_width="8dp"
                android:layout_height="fill_parent" >
            </View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:padding="4dp" >

                <ImageView
                    android:id="@+id/ivNavAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_action_account" />

                <TextView
                    android:id="@+id/tvNavAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/ivNavAccount"
                    android:text="@string/nav_account"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/nav_fg" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNavStarred"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/llNavAccount"
            android:background="@drawable/nav_item"
            android:clickable="true"
            android:gravity="center|left" >

            <View
                android:id="@+id/viewRedbarNavStarred"
                android:layout_width="8dp"
                android:layout_height="fill_parent" >
            </View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:padding="4dp" >

                <ImageView
                    android:id="@+id/ivNavStarred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_action_star_1" />

                <TextView
                    android:id="@+id/tvNavStarred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/ivNavStarred"
                    android:text="@string/nav_starred"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/nav_fg" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNavInfo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/llNavStarred"
            android:background="@drawable/nav_item"
            android:clickable="true"
            android:gravity="center|left" >

            <View
                android:id="@+id/viewRedbarNavInfo"
                android:layout_width="8dp"
                android:layout_height="fill_parent" >
            </View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:padding="4dp" >

                <ImageView
                    android:id="@+id/ivNavInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_action_info" />

                <TextView
                    android:id="@+id/tvNavInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/ivNavInfo"
                    android:text="@string/nav_info"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/nav_fg" />
            </RelativeLayout>
        </LinearLayout>

        <org.holoeverywhere.widget.TextView
            android:id="@+id/tvHlAccountlist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llNavInfo"
            android:layout_marginTop="8dp"
            android:drawableBottom="@drawable/navigation_header"
            android:drawablePadding="4dp"
            android:paddingLeft="16dp"
            android:text="@string/nav_hl_ccountlist"
            android:textAllCaps="true"
            android:textColor="@color/nav_headline"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/llAccountlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHlAccountlist"
            android:orientation="vertical" >
        </LinearLayout>

        <org.holoeverywhere.widget.TextView
            android:id="@+id/tvHlSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llAccountlist"
            android:layout_marginTop="8dp"
            android:drawableBottom="@drawable/navigation_header"
            android:drawablePadding="4dp"
            android:paddingLeft="16dp"
            android:text="@string/nav_hl_other"
            android:textAllCaps="true"
            android:textColor="@color/nav_headline"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/llNavSettings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/tvHlSettings"
            android:background="@drawable/nav_item"
            android:clickable="true"
            android:gravity="center|left" >

            <View
                android:id="@+id/viewRedbarNavSettings"
                android:layout_width="8dp"
                android:layout_height="fill_parent" >
            </View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:padding="4dp" >

                <ImageView
                    android:id="@+id/ivNavSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_action_settings" />

                <TextView
                    android:id="@+id/tvNavSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/ivNavSettings"
                    android:text="@string/nav_settings"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/nav_fg" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNavAbout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/llNavSettings"
            android:background="@drawable/nav_item"
            android:clickable="true"
            android:gravity="center|left" >

            <View
                android:id="@+id/viewRedbarNavAbout"
                android:layout_width="8dp"
                android:layout_height="fill_parent" >
            </View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:padding="4dp" >

                <ImageView
                    android:id="@+id/ivNavAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_action_help" />

                <TextView
                    android:id="@+id/tvNavAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/ivNavAbout"
                    android:text="@string/nav_about"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/nav_fg" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>